# Termenu-Rust-Template

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: build-test.yml
src/: main.rs
src/commands/: developer_command.rs  hello_world_command.rs  inspire_command.rs  mod.rs
src/modules/: banner.rs  exceptions.rs  mod.rs  termenu.rs
src/modules/termenu/: core.rs  exceptions.rs  mod.rs
